--- a/packages/bonsoir/pubspec.yaml
+++ b/packages/bonsoir/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   flutter:
     sdk: flutter
   bonsoir_platform_interface: ^5.1.2
-  bonsoir_android: ^5.1.4
-  bonsoir_darwin: ^5.1.2
-  bonsoir_windows: ^5.1.4
-  bonsoir_linux: ^5.1.2
+#  bonsoir_android: ^5.1.4
+#  bonsoir_darwin: ^5.1.2
+#  bonsoir_windows: ^5.1.4
+#  bonsoir_linux: ^5.1.2
 
 dev_dependencies:
   flutter_lints: ^3.0.1
